--- a/package.json
+++ b/package.json
@@ -7,24 +7,30 @@
     "private": true,
     "main": "./lib/app.js",
     "dependencies": {
+        "@azure/identity": "^4.10.1",
+        "@types/dotenv": "^8.2.3",
+        "@types/mssql": "^9.1.7",
+        "dotenv": "^16.5.0",
         "express": "^4.21.1",
+        "mssql": "^11.0.1",
         "send": "^0.18.0"
     },
     "devDependencies": {
-        "@types/node": "^18.0.0",
         "@types/express": "^5.0.0",
+        "@types/node": "^18.0.0",
         "@types/send": "^0.17.1",
         "env-cmd": "^10.1.0",
         "nodemon": "^3.1.7",
+        "shx": "^0.3.3",
         "ts-node": "^10.9.1",
-        "typescript": "^4.1.2",
-        "shx": "^0.3.3"
+        "typescript": "^4.1.2"
     },
     "scripts": {
         "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run start",
         "start": "nodemon --exec node --inspect=9239 --signal SIGINT -r ts-node/register src/app.ts",
         "build": "tsc --build && shx cp -r ./src/views ./src/static ./lib/",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "test:db": "ts-node src/api/test-db.ts"
     },
     "homepage": "."
 }
